2017-10-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* SDCC.props: boost 1.64
	* sdas/linksrc/lkmem.c: fixed warning
	* src/mcs51/peep.c,
	* src/SDCCast.c,
	* src/SDCCcse.c,
	* src/SDCCmem.c,
	* src/z80/ralloc2.cc: cosmetic changes

2017-10-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Improve handling of a in pointer read and ifx.

2017-10-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/z80/main.c (_parseOptions): fix bug #2634

2017-10-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCdwarf2.h,
	  src/SDCCdwarf2.c:
	  CFI handling in DWARFv2 output, patch by Åke Rehnman.

2017-10-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c:
	  Debug info infrastructure for stm8 registers.
	* device/lib/_fsgt.c,
	  device/lib/incl.mk,
	  src/SDCCsymt.h,
	  src/SDCCsymt.c
	  src/SDCCopt.c:
	  Remove __fsgt support function, RFE #526.
	* src/z80/gen.c:
	  Improve handling of variables on stack in return.
	* src/SDCCsymt.c:
	  Fix bug #2666.

2017-10-16 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/mcs51/peeph.def:
	  Fix a potential bug in label reference count calculation.

2017-10-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCdebug.h,
	  src/SDCCdwarf2.c,
	  src/cdbFile.c,
	  src/stm8/gen.c,
	  src/stm8/ralloc.c,
	  src/stm8/ralloc.h:
	  STM8 frame address debug info, based on patch by Åke Rehnman.
	* src/stm8/main.c:
	  Implement RFE #538: Option for stack pointer startup value for stm8.
	* device/lib/*/mulchar.s:
	  Minor char multiplication improvement.
	* sdas/linksrc/lkelf.c:
	  RFE #2670 ELF e_entry, patch by Åke Rehnman.
	* src/SDCCtree_dec.hpp,
	  src/SDCCralloc.hpp,
	  src/SDCCnaddr.hpp,
	  src/SDCClospre.cc:
	  More verbose --dump-graphs output.
	* device/lib/z180/mul.s:
	  Better multiplication support routine for z180.

2017-10-11 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-920922-1.c,
	  support/regression/tests/gcc-torture-execute-950612-1.c: